# io_tutorials

./: .gitignore  .gitmodules  .travis.yml  Jenkinsfile  README.md
custom_message/custom_msgs/: CMakeLists.txt  custom_message.launch  custom_talker.py  package.xml
custom_message/custom_msgs/msg/: ChargeMetric.msg  ChargeStatus.msg  LocalizationMetric.msg  OrderMetric.msg  RobotSpeedMetric.msg  RobotTrajectoryMetric.msg  RoutesMetric.msg  UnloadMetric.msg
flask_helloworld/: Dockerfile  README.md  app.py  requirements.txt
gazebo_examples/turtlebot/: README.md  io_gazebo_turtlebot.rosinstall
gazebo_examples/ur_robotiq/: ur_robotiq.rosinstall
io_manifests/: README.md  led_trigger_manifest.json  minio_file_server_manifest.json  publisher_for_configured_devices_manifest.json  simple_hello_world_manifest.json
io_manifests/basic_ros_publisher_subscriber/: docker_publisher_subscriber_manifest.json  preinstalled_ros_publisher_subsciber_manifest.json  preinstalled_ros_publisher_subscriber_manifest.json
io_manifests/basic_simulation/: turtlebot_robot_simulation_manifest.json
io_manifests/dependency_composition/: dynamic_map_server_manifest.json  map_listener_manifest.json
io_manifests/grafana/: grafana_v0.0.0_manifest.json  grafana_v0.1.0_manifest.json
io_manifests/io_metrics_collector/: io_metrics_collector_v0.0.0_manifest.json  io_metrics_collector_v0.1.0_manifest.json  io_metrics_collector_v0.2.0_manifest.json
io_manifests/local_communication/: ros_subscriber_manifest.json
io_manifests/separate_simulation_application/: simulation_manifest.json
io_manifests/turtlesim/: command_center_manifest.json  (+3 more)
io_turtlesim/: .README.md.swp  README.md
io_turtlesim/io_turtle/: CMakeLists.txt  package.xml
io_turtlesim/io_turtle/cfg/: Control.cfg
io_turtlesim/io_turtle/include/io_turtle/: io_turtle.hpp  io_turtle_base.hpp  io_turtle_scoped_targetted.hpp  turtle.hpp
io_turtlesim/io_turtle/launch/: turtle.launch  turtle_scoped_targetted.launch
io_turtlesim/io_turtle/src/: io_turtle.cpp  io_turtle_node.cpp  io_turtle_scoped_targetted.cpp
io_turtlesim/io_turtle_action/: CMakeLists.txt  package.xml
io_turtlesim/io_turtle_action/action/: GoTo.action
io_turtlesim/io_turtle_command_center/: CMakeLists.txt  package.xml
io_turtlesim/io_turtle_command_center/launch/: command_center.launch
io_turtlesim/io_turtle_command_center/src/: io_turtle_command_center_node.cpp
io_turtlesim/io_turtle_config/: CMakeLists.txt  package.xml
io_turtlesim/io_turtle_msgs/: CMakeLists.txt  package.xml
io_turtlesim/io_turtle_msgs/msg/: DistanceSensor.msg  Pose.msg  Velocity.msg
io_turtlesim/io_turtle_services/: CMakeLists.txt  package.xml
io_turtlesim/io_turtle_services/srv/: RegisterSimTurtle.srv  RegisterTurtle.srv  TeleportTurtle.srv
io_turtlesim/io_turtle_sim_env/: CMakeLists.txt  package.xml
io_turtlesim/io_turtle_sim_env/include/io_turtle_sim_env/: io_turtle_sim_env.hpp  io_turtle_sim_env_base.hpp  io_turtle_sim_env_scoped_targetted.hpp
io_turtlesim/io_turtle_sim_env/launch/: demo_sim.launch  simulation.launch
io_turtlesim/io_turtle_sim_env/src/: io_turtle_sim_env.cpp  io_turtle_sim_env_node.cpp  io_turtle_sim_env_scoped_targetted.cpp
io_turtlesim_scoped_targetted/: LICENSE
io_turtlesim_scoped_targetted/io_turtle/: CMakeLists.txt  package.xml
io_turtlesim_scoped_targetted/io_turtle/include/io_turtle_scoped_targetted/: io_turtle.hpp  turtle.hpp
io_turtlesim_scoped_targetted/io_turtle/launch/: turtle.launch
io_turtlesim_scoped_targetted/io_turtle/src/: io_turtle.cpp  io_turtle_node.cpp
io_turtlesim_scoped_targetted/io_turtle_command_center/: CMakeLists.txt  package.xml
io_turtlesim_scoped_targetted/io_turtle_command_center/launch/: command_center.launch
io_turtlesim_scoped_targetted/io_turtle_sim_env/: CMakeLists.txt  package.xml
io_turtlesim_scoped_targetted/io_turtle_sim_env/launch/: demo_sim.launch  simulation.launch
io_turtlesim_scoped_targetted/io_turtle_sim_env/src/: io_turtle_sim_env_node.cpp
navigation/dynamic_map_server/: CMakeLists.txt  package.xml
navigation/dynamic_map_server/launch/: map_server.launch
navigation/dynamic_map_server/src/: image_loader.cpp  main.cpp
navigation/dynamic_map_server/test/: real_sim_slam_map.yaml  rtest.xml
navigation/map_listener/: CMakeLists.txt  package.xml
navigation/map_listener/launch/: listener.launch
navigation/map_listener/scripts/: listener.py
pingpongst/: CMakeLists.txt  package.xml
pingpongst/launch/: pingst.launch  pongst.launch
pingpongst/msg/: ping.msg  pong.msg
pingpongst/src/: ping.cpp
sdk_samples/: minio_file_server.ipynb  persistent_volume.ipynb  publisher_subscriber.ipynb  talker_listener.ipynb  talker_listener_one_package.ipynb  turtlesim.ipynb
services/: service_example.json
simon_says/alphabot/: CMakeLists.txt  README.md  package.xml  setup.py
simon_says/alphabot/launch/: alphabot.launch
simon_says/alphabot/scripts/: AlphaBot2.py  PCA9685.py  alphabot2pi_node.py
simon_says/alphabot2pi/: CMakeLists.txt  README.md  package.xml  setup.py
simon_says/alphabot2pi/launch/: alphabot2pi_node.launch
simon_says/alphabot2pi/scripts/: AlphaBot2.py  alphabot2pi_node.py
simon_says/central_node/: CMakeLists.txt  README.md  package.xml
simon_says/central_node/config/: config.yaml
simon_says/central_node/include/: central_node.hpp  device.hpp
simon_says/central_node/launch/: central_node.launch
simon_says/central_node/src/: central_node.cpp  device.cpp
simon_says/device_wrapper/: CMakeLists.txt  package.xml
simon_says/device_wrapper/include/: device.hpp  device_wrapper.hpp
simon_says/device_wrapper/src/: device_wrapper.cpp
simon_says/gopigo/: CMakeLists.txt  README.md  package.xml
simon_says/gopigo/launch/: gopigo.launch  gopigo_node.launch  gopigo_simon_says.launch
simon_says/gopigo/scripts/: gopigo_control_node.py
simon_says/gopigo/src/: gopigo_node.cpp
simon_says/gopigo_control/: CMakeLists.txt  package.xml
simon_says/gopigo_control/launch/: gopigo_control.launch
simon_says/gopigo_control/scripts/: gopigo_control_node.py
(+240 files in other folders)
