<?xml version="1.0"?>
<package format="2">
  <name>custom_msgs</name>
  <version>1.0.0</version>
  <description>
    Custom Metric messages
  </description>
  <maintainer email="opensource@rapyuta-robotics.com">rapyuta-robotics</maintainer>
  <license>Commercial</license>

  <author>rapyuta-robotics</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
</package>

