<?xml version="1.0"?>
<package format="2">
  <name>io_turtle_action</name>
  <version>1.0.0</version>
  <description>
    IO Turtle ROS Actions
  </description>
  <maintainer email="gautham.manoharan@rapyuta-robotics.com">Gautham Manoharan</maintainer>
  <license>Commercial</license>

  <author>Gautham Manoharan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
