<?xml version="1.0"?>
<package format="2">
  <name>io_turtle_scoped_targetted</name>
  <version>1.0.0</version>
  <description>
    IO Turtle Node
  </description>
  <maintainer email="gautham.manoharan@rapyuta-robotics.com">Gautham Manoharan</maintainer>
  <maintainer email="yu.okamoto@rapyuta-robotics.com">Yu Okamoto</maintainer>
  <license>Commercial</license>

  <author>Gautham Manoharan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <depend>io_turtle_scoped_targetted_action</depend>
  <depend>io_turtle_scoped_targetted_msgs</depend>
  <depend>io_turtle_scoped_targetted_services</depend>

  <exec_depend>io_turtle_scoped_targetted_config</exec_depend>
</package>
