<?xml version="1.0"?>
<package format="2">
  <name>io_turtle_scoped_targetted_sim_env</name>
  <version>1.0.0</version>
  <description>
    IO Turtle Simulation Environment
  </description>
  <maintainer email="gautham.manoharan@rapyuta-robotics.com">Gautham Manoharan</maintainer>
  <maintainer email="yu.okamoto@rapyuta-robotics.com">Yu Okamoto</maintainer>
  <license>Commercial</license>

  <author>Gautham Manoharan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <depend>io_turtle_scoped_targetted</depend>
  <depend>io_turtle_scoped_targetted_msgs</depend>
  <depend>io_turtle_scoped_targetted_services</depend>

  <exec_depend>io_turtle_scoped_targetted_config</exec_depend>
  <exec_depend>io_turtle_scoped_targetted_command_center</exec_depend>
</package>
