<package>
    <name>dynamic_map_server</name>
    <version>1.0</version>
    <description>

        dynamic_map_server provides a modified version of the <tt>map_server</tt> ROS <a href="http://www.ros.org/wiki/Nodes">Node</a>, which offers map data as a ROS <a href="http://www.ros.org/wiki/Services">Service</a>. This version provides a /set_map ros service which allows updating the map and /save_map ros service which saves the current map to disk in the .ros directory.

    </description>
    <author>Abdurrahman Qureshi</author>
    <author>rahman.qureshi@rapyuta-robotics.com@gmail.com</author>
    <maintainer email="hendrik.skubch@rapyuta-robotics.com ">Hendrik Skubch</maintainer>
    <license>BSD</license>

    <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

    <build_depend>bullet</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sdl</build_depend>
    <build_depend>sdl-image</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>yaml-cpp</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>bullet</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sdl</run_depend>
    <run_depend>sdl-image</run_depend>
    <run_depend>tf2</run_depend>
    <run_depend>yaml-cpp</run_depend>
    <run_depend>message_runtime</run_depend>

    <test_depend>rospy</test_depend>
    <test_depend>rostest</test_depend>
    <test_depend>rosunit</test_depend>
</package>
