<?xml version="1.0"?>
<package format="2">
    <name>dynamic_map_server</name>
    <version>1.0.0</version>
    <description>

        dynamic_map_server provides a modified version of the <tt>map_server</tt> ROS <a href="http://www.ros.org/wiki/Nodes">Node</a>, which offers map data as a ROS <a href="http://www.ros.org/wiki/Services">Service</a>. This version provides a /set_map ros service which allows updating the map and /save_map ros service which saves the current map to disk in the .ros directory.

    </description>
    <author>Abdurrahman Qureshi</author>
    <author>rahman.qureshi@rapyuta-robotics.com</author>
    <maintainer email="hendrik.skubch@rapyuta-robotics.com">Hendrik Skubch</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sdl</depend>
    <depend>sdl-image</depend>
    <depend>tf2</depend>
    <depend>yaml-cpp</depend>

    <build_depend>message_generation</build_depend>

    <exec_depend>message_runtime</exec_depend>

    <test_depend>rospy</test_depend>
    <test_depend>rostest</test_depend>
    <test_depend>rosunit</test_depend>
</package>
