<?xml version="1.0"?>
<package format="2">
  <name>map_listener</name>
  <version>0.0.0</version>
  <description>The map_listener package</description>

  <maintainer email="hendrik.skubch@rapyuta-robotics.com">Hendrik</maintainer>

  <license>Commercial</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>nav_msgs</depend>

</package>
