<?xml version="1.0"?>
<package format="2">
  <name>alphabot2pi</name>
  <version>1.0.0</version>
  <description>Simon Says Alphabot2pi Package</description>

  <maintainer email="alexander.bolinsky@rapyuta-robotics.com">Alexander Bolinsky</maintainer>

  <license>Commercial</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>simon_says</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
