<?xml version="1.0"?>
<package format="2">
  <name>gopigo</name>
  <version>1.0.0</version>
  <description>Simon Says GoPiGo Package</description>

  <maintainer email="tom.stewart@rapyuta-robotics.com">Tom Stewart</maintainer>

  <license>Commercial</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>simon_says_device_wrapper</depend>
</package>
